# tfg_backend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.docker/: Dockerfile
alembic/: env.py
alembic/versions/: 1f2fde9b867e_roles_table.py  6ca9cfa9b728_create_tables.py  717bc1339a7c_create_tables.py  8f745a210004_create_tables.py  9e29be602afd_roles_table.py  a990828dca13_roles_table_updated_to_name_and_number.py  cc144723318b_roles_table.py  d680ad0a3964_user_role_relationship_updated.py  d6b1e22af98b_user_role_id_added.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: __init__.py  role_model.py  user_model.py  video_model.py
app/routes/: routes.py  user_route.py  video_route.py
app/schemas/: user_schema.py  video_schema.py
app/services/: user_service.py  video_service.py
app/utils/: response_model.py
tests/api_tests/: users_route.http
